Meddleware and casbin fixed
