# main.go
@@ -1,7 +1,6 @@
 package main
 
 import (
-	"fmt"
 	"log"
 	"tender_management/config"
 	"tender_management/controllers"
@@ -13,8 +12,8 @@ import (
 
 	"github.com/casbin/casbin/v2"
 	"github.com/gin-gonic/gin"
-	"github.com/swaggo/files"
-	"github.com/swaggo/gin-swagger"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // @title Tender Management REST API
@@ -24,7 +23,6 @@ import (
 // @contact.url https://github.com/muhtorkhon
 // @contact.email muhtorhongofurov@gmail.com
 
-// @securityDefinitions.basic  BasicAuth
 // @securityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
@@ -38,7 +36,7 @@ func main() {
 	}
 
 	r := gin.Default()
-	
+
 	cfg := config.LoadConfig()
 	gin.SetMode(gin.ReleaseMode)
 
@@ -52,63 +50,93 @@ func main() {
 	if err := redisDb.Ping(); err != nil {
 		log.Fatalf("Redis ulanish xatosi: %v", err)
 	}
-
+	
 	authSt := controllers.NewAuthController(conn, redisDb)
-	tenderSt:= controllers.NewTenderController(conn)
+	tenderSt := controllers.NewTenderController(conn)
 	offerSt := controllers.NewOfferController(conn)
 	notifSt := controllers.NewNotifController(conn)
 
-	r.POST("/auth/register", authSt.CreateUser)
-	r.POST("/auth/verify", authSt.VerifyCode)
-	r.POST("/auth/login", authSt.LoginUser)
+	public := r.Group("")
 
-	client := r.Group("/client")
-	client.Use(middleware.AutoMiddleware(enforcer))
-	{
-		client.GET("/dashboard", func(c *gin.Context) {
-			c.JSON(200, "Welcome to the client dashboard")
-		})
+	public.POST("/auth/register", authSt.CreateUser)
+	public.POST("/auth/verify", authSt.VerifyCode)
+	public.POST("/auth/login", authSt.LoginUser)
 
-		client.POST("/tenders", tenderSt.CreateTender)
-		client.GET("/tenders", tenderSt.GetAllTenders)
-		client.GET("/tenders/:client_id", tenderSt.GetTenders)
-		client.PUT("/tenders/:id", tenderSt.UpdateTender)
-		client.DELETE("/tenders/:id", tenderSt.DeleteTender)
-		client.PATCH("/tenders/restore/:id", tenderSt.RestoreTender)
+	r.Use(middleware.AutoMiddleware(enforcer))
 
-		client.GET("/offers", offerSt.GetAllOffers)
-		client.GET("/offers/sorted", offerSt.GetFilterSort)
-		client.GET("/offers/filter", offerSt.GetMaxMinFilter)
+	r.POST("/tenders", tenderSt.CreateTender)
+	r.GET("/tenders", tenderSt.GetAllTenders)
+	r.GET("/tenders/:client_id", tenderSt.GetTenders)
+	r.PUT("/tenders/:id", tenderSt.UpdateTender)
+	r.DELETE("/tenders/:id", tenderSt.DeleteTender)
+	r.PATCH("/tenders/restore/:id", tenderSt.RestoreTender)
 
-		client.POST("/notifs", notifSt.CreateNotif)
-		client.GET("/notifs/:user_id/:relation_id", notifSt.GetNotifClient)
-	}
+	r.POST("/offers", offerSt.CreateOffer)
+	r.GET("/offers", offerSt.GetAllOffers)
+	r.GET("/offers/sorted", offerSt.GetFilterSort)
+	r.GET("/offers/filter", offerSt.GetMaxMinFilter)
+	r.GET("/offers/:contractor_id", offerSt.GetOffer)	
+	r.PUT("/offers/:id", offerSt.UpdateOffer)
+	r.DELETE("/offers/:id", offerSt.DeleteOffer)
+	r.PATCH("/offers/restore/:id", offerSt.RestoreOffer)
 
-	contractor := r.Group("/contractor")
-	contractor.Use(middleware.AutoMiddleware(enforcer))
-	{
-		contractor.GET("/profile", func(c *gin.Context) {
-			email, _ := c.Get("email")
-			userEmail := fmt.Sprintf("Welcome too your profile %s", email)
-			c.JSON(200, userEmail)
-		})
-		
-		contractor.POST("/offers", offerSt.CreateOffer)
-		contractor.GET("/offers", offerSt.GetAllOffers)
-		contractor.GET("/offers/:contractor_id", offerSt.GetOffer)
-		contractor.PUT("/offers/:id", offerSt.UpdateOffer)
-		contractor.DELETE("/offers/:id", offerSt.DeleteOffer)
-		contractor.PATCH("/offers/restore/:id", offerSt.RestoreOffer)
+	r.POST("/notifs", notifSt.CreateNotif)
+	r.GET("/notifs/:user_id/:relation_id", notifSt.GetNotifsUser)
 
-		contractor.GET("/tenders", tenderSt.GetAllTenders)
-
-		contractor.POST("/notifs", notifSt.CreateNotif)
-		contractor.GET("/notifs/:user_id/:relation_id", notifSt.GetNotifContractor)
-	}
-
-	r.GET("/Tender-management/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	public.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	if err := r.Run(":8080"); err != nil {
 		log.Fatalf("Failed to run server on port: 8080")
 	}
 }
+
+// 	client := r.Group("/client")
+// 	client.Use(middleware.AutoMiddleware(enforcer))
+// 	{
+// 		client.GET("/dashboard", func(c *gin.Context) {
+// 			c.JSON(200, "Welcome to the client dashboard")
+// 		})
+
+// 		client.POST("/tenders", tenderSt.CreateTender)
+// 		client.GET("/tenders", tenderSt.GetAllTenders)
+// 		client.GET("/tenders/:client_id", tenderSt.GetTenders)
+// 		client.PUT("/tenders/:id", tenderSt.UpdateTender)
+// 		client.DELETE("/tenders/:id", tenderSt.DeleteTender)
+// 		client.PATCH("/tenders/restore/:id", tenderSt.RestoreTender)
+
+// 		client.GET("/offers", offerSt.GetAllOffers)
+// 		client.GET("/offers/sorted", offerSt.GetFilterSort)
+// 		client.GET("/offers/filter", offerSt.GetMaxMinFilter)
+
+// 		client.POST("/notifs", notifSt.CreateNotif)
+// 		client.GET("/notifs/:user_id/:relation_id", notifSt.GetNotifClient)
+// 	}
+
+// 	contractor := r.Group("/contractor")
+// 	contractor.Use(middleware.AutoMiddleware(enforcer))
+// 	{
+// 		contractor.GET("/profile", func(c *gin.Context) {
+// 			email, _ := c.Get("email")
+// 			userEmail := fmt.Sprintf("Welcome too your profile %s", email)
+// 			c.JSON(200, userEmail)
+// 		})
+
+// 		contractor.POST("/offers", offerSt.CreateOffer)
+// 		contractor.GET("/offers", offerSt.GetAllOffers)
+// 		contractor.GET("/offers/:contractor_id", offerSt.GetOffer)
+// 		contractor.PUT("/offers/:id", offerSt.UpdateOffer)
+// 		contractor.DELETE("/offers/:id", offerSt.DeleteOffer)
+// 		contractor.PATCH("/offers/restore/:id", offerSt.RestoreOffer)
+
+// 		contractor.GET("/tenders", tenderSt.GetAllTenders)
+
+// 		contractor.POST("/notifs", notifSt.CreateNotif)
+// 		contractor.GET("/notifs/:user_id/:relation_id", notifSt.GetNotifContractor)
+// 	}
+
+// 	r.GET("/Tender-management/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+// 	if err := r.Run(":8080"); err != nil {
+// 		log.Fatalf("Failed to run server on port: 8080")
+// 	}
+// }
